@@ -37,8 +37,14 @@ function send_nocacheing_headers()
 
   header("Expires: ".gmdate("D, d M Y H:i:s")." GMT");
   header("Last-Modified: ".gmdate("D, d M Y H:i:s")." GMT");
-  header("Cache-Control: no-store, no-cache, must-revalidate, post-check=0, pre-check=0");
+  header("Cache-Control: private, no-store, no-cache, must-revalidate, post-check=0, pre-check=0");
   header("Pragma: no-cache");
+  
+  // We need to set the following headers to make downloads work using IE in HTTPS mode.
+  if (isset($_SERVER['HTTPS'])) {
+    header('Pragma: ');
+    header('Cache-Control: ');
+  }
 }
 
 
