@@ -14,7 +14,7 @@
 
 <p><br />
 <input type="button" value="<roundcube:label name="cancel" />" class="button" onclick="history.back()" />&nbsp;
-<roundcube:button command="save" type="input" class="button" label="save mainaction" />
+<roundcube:button command="save" type="input" class="button mainaction" label="save" />
 </p>
 
 </form>
